# mobile-robots

./: .gitignore  a1_dreirad_1.py  a2_wandverfolgung.py  a3_particle_filter.py  a4_kalman_filter.py  a4_kalman_filter_cpp.py  example.py  readme.txt
robosimcpp/: .clang-tidy  CMakeLists.txt  example.cpp
robosimcpp/include/: ekf.h  landmark.h  localisation.h  localise.h  observation_model.h  sensor.h
robosimcpp/src/: bindings.cpp  ekf.cpp  sensor.cpp
robosimcpp/test/: test_robosimcpp.cpp
robosimpy/: __init__.py  gui.py  requirements.txt  robots.py  util.py
robosimpy/docs/: index.html  robosimpy.html  search.js
robosimpy/docs/robosimpy/: gui.html  robots.html  util.html  worlds.html
robosimpy/worlds/: simple_world.json
